--- a/notritionVendorsAPP/View/AccountDetail.storyboard
+++ b/notritionVendorsAPP/View/AccountDetail.storyboard
@@ -13,26 +13,26 @@
         <!--View Controller-->
         <scene sceneID="TvI-sC-zHv">
             <objects>
-                <viewController id="eZ6-kb-Z5i" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AccountDetailStoryboardID" id="eZ6-kb-Z5i" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="54D-oJ-Wgk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="firstBKImage" translatesAutoresizingMaskIntoConstraints="NO" id="6s0-Ub-ZTy">
-                                <rect key="frame" x="10" y="20" width="355" height="150"/>
+                                <rect key="frame" x="10" y="64" width="355" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="iqh-od-Xem"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nutrition_icon" translatesAutoresizingMaskIntoConstraints="NO" id="jB1-UH-Nl9">
-                                <rect key="frame" x="127.5" y="70" width="120" height="120"/>
+                                <rect key="frame" x="127.5" y="114" width="120" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="999" constant="120" id="Ddx-Mi-MSA"/>
                                     <constraint firstAttribute="width" priority="999" constant="120" id="Uks-FM-8zF"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YLx-3f-qEZ">
-                                <rect key="frame" x="10" y="190" width="355" height="467"/>
+                                <rect key="frame" x="10" y="234" width="355" height="423"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Callie Nguyen" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V60-Bw-FiI">
                                         <rect key="frame" x="10" y="0.0" width="335" height="30"/>
@@ -59,7 +59,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XPY-8o-nTA">
-                                        <rect key="frame" x="0.0" y="100" width="355" height="367"/>
+                                        <rect key="frame" x="0.0" y="100" width="355" height="323"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="accountCell" textLabel="h7f-fK-Q41" detailTextLabel="Bih-wm-djr" style="IBUITableViewCellStyleValue1" id="xaP-Ov-RDc">
@@ -124,7 +124,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="khJ-py-MN8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-528.98550724637687" y="3088.3928571428569"/>
+            <point key="canvasLocation" x="232.80000000000001" y="2990.5547226386807"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fZU-8h-4Q0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="170-dT-2dn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mV2-lO-hgH">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="eZ6-kb-Z5i" kind="relationship" relationship="rootViewController" id="BT4-DY-BAG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="plf-i7-R5j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-706.39999999999998" y="2990.5547226386807"/>
         </scene>
     </scenes>
     <resources>
