--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -879,53 +879,46 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="AccountCell" id="1i4-LY-N92" customClass="AccountCell" customModule="notritionVendorsAPP" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="AccountCell" rowHeight="50" id="1i4-LY-N92" customClass="AccountCell" customModule="notritionVendorsAPP" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1i4-LY-N92" id="vhn-8f-nf0">
-                                            <rect key="frame" x="0.0" y="0.0" width="376" height="43.666666666666664"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="376" height="49.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="MdE-9K-Syw">
-                                                    <rect key="frame" x="20" y="10" width="356" height="23.666666666666671"/>
+                                                    <rect key="frame" x="20" y="9.6666666666666643" width="356" height="30"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pSr-R8-eaj">
-                                                            <rect key="frame" x="0.0" y="0.0" width="30" height="23.666666666666668"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pSr-R8-eaj" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <color key="tintColor" red="0.15770708589999999" green="0.59793636610000001" blue="0.62121031149999995" alpha="0.9472121147" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="30" id="EwW-Em-8Ri"/>
+                                                                <constraint firstAttribute="width" constant="30" id="iEe-W7-TTY"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ws3-Fh-E0O">
-                                                            <rect key="frame" x="45" y="0.0" width="196" height="23.666666666666668"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lap-Bp-ggt">
-                                                            <rect key="frame" x="256" y="0.0" width="100" height="23.666666666666668"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="100" id="671-TM-LaY"/>
-                                                            </constraints>
+                                                            <rect key="frame" x="45" y="0.0" width="311" height="30"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="QpP-9U-E4Y"/>
+                                                        <constraint firstItem="ws3-Fh-E0O" firstAttribute="height" secondItem="pSr-R8-eaj" secondAttribute="height" id="R9w-Ct-Gci"/>
+                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="MdE-9K-Syw" firstAttribute="leading" secondItem="vhn-8f-nf0" secondAttribute="leading" constant="20" id="fnH-K1-6X8"/>
-                                                <constraint firstItem="MdE-9K-Syw" firstAttribute="top" secondItem="vhn-8f-nf0" secondAttribute="top" constant="10" id="gVe-DB-M0F"/>
                                                 <constraint firstAttribute="bottom" secondItem="MdE-9K-Syw" secondAttribute="bottom" constant="10" id="nkH-dc-b0D"/>
                                                 <constraint firstAttribute="trailing" secondItem="MdE-9K-Syw" secondAttribute="trailing" id="znB-QV-Frp"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="icon" destination="pSr-R8-eaj" id="LwQ-OK-mSP"/>
-                                            <outlet property="propertyAction" destination="Lap-Bp-ggt" id="pML-ZP-Tul"/>
                                             <outlet property="propertyName" destination="ws3-Fh-E0O" id="5Ub-CY-TBM"/>
                                         </connections>
                                     </tableViewCell>
