--- a/notritionVendorsAPP/Controller/account/view/ActivityCell.xib
+++ b/notritionVendorsAPP/Controller/account/view/ActivityCell.xib
@@ -12,18 +12,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ActivityCell" rowHeight="202" id="KGk-i7-Jjw" customClass="ActivityCell" customModule="notritionVendorsAPP" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="526" height="202"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ActivityCell" editingAccessoryType="checkmark" rowHeight="141" id="KGk-i7-Jjw" customClass="ActivityCell" customModule="notritionVendorsAPP" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="526" height="141"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="526" height="201.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="488" height="140.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hdD-l1-N8w">
-                        <rect key="frame" x="10" y="10" width="516" height="201.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="hdD-l1-N8w">
+                        <rect key="frame" x="10" y="10" width="478" height="120.5"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="InC-6a-4Ix">
-                                <rect key="frame" x="0.0" y="0.0" width="516" height="50"/>
+                                <rect key="frame" x="0.0" y="0.0" width="478" height="50"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ewx-7p-BuX" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -33,7 +33,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioY-qy-7iF">
-                                        <rect key="frame" x="60" y="0.0" width="456" height="50"/>
+                                        <rect key="frame" x="60" y="0.0" width="418" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -44,16 +44,16 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="VG7-at-77q">
-                                <rect key="frame" x="0.0" y="60" width="516" height="30"/>
+                                <rect key="frame" x="0.0" y="50" width="478" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wjW-lO-MGR">
-                                        <rect key="frame" x="0.0" y="0.0" width="456" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="418" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bSc-6c-5dp">
-                                        <rect key="frame" x="466" y="0.0" width="50" height="30"/>
+                                        <rect key="frame" x="428" y="0.0" width="50" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="F4X-qY-gs7"/>
                                         </constraints>
@@ -69,8 +69,11 @@
                                 </constraints>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="isM-tm-E7U">
-                                <rect key="frame" x="0.0" y="100" width="516" height="101.5"/>
+                                <rect key="frame" x="0.0" y="80" width="478" height="40.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="Ahh-nk-fy7"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -78,6 +81,7 @@
                         <constraints>
                             <constraint firstItem="isM-tm-E7U" firstAttribute="width" secondItem="hdD-l1-N8w" secondAttribute="width" id="2nq-kN-x4W"/>
                             <constraint firstItem="InC-6a-4Ix" firstAttribute="width" secondItem="hdD-l1-N8w" secondAttribute="width" id="Fcz-Dp-hhc"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="110" id="YiF-9F-tpL"/>
                             <constraint firstItem="VG7-at-77q" firstAttribute="width" secondItem="hdD-l1-N8w" secondAttribute="width" id="sfB-e7-JYt"/>
                         </constraints>
                     </stackView>
@@ -85,7 +89,7 @@
                 <constraints>
                     <constraint firstItem="hdD-l1-N8w" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="FO1-tv-jHh"/>
                     <constraint firstAttribute="trailing" secondItem="hdD-l1-N8w" secondAttribute="trailing" id="V8I-y9-jBz"/>
-                    <constraint firstAttribute="bottom" secondItem="hdD-l1-N8w" secondAttribute="bottom" constant="-10" id="dn2-Kc-Lnn"/>
+                    <constraint firstAttribute="bottom" secondItem="hdD-l1-N8w" secondAttribute="bottom" constant="10" id="dn2-Kc-Lnn"/>
                     <constraint firstItem="hdD-l1-N8w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="qkO-R7-1Og"/>
                 </constraints>
             </tableViewCellContentView>
@@ -97,7 +101,7 @@
                 <outlet property="contentRating" destination="bSc-6c-5dp" id="tFb-Md-LhS"/>
                 <outlet property="contentTitle" destination="wjW-lO-MGR" id="Bvn-0x-ls4"/>
             </connections>
-            <point key="canvasLocation" x="131.19999999999999" y="184.40779610194903"/>
+            <point key="canvasLocation" x="131.19999999999999" y="156.97151424287858"/>
         </tableViewCell>
     </objects>
 </document>
