disable content comment

--- a/notritionVendorsAPP/Controller/account/view/ActivityCell.xib
+++ b/notritionVendorsAPP/Controller/account/view/ActivityCell.xib
@@ -68,7 +68,7 @@
                                     <constraint firstAttribute="height" constant="30" id="sZ2-o1-ucg"/>
                                 </constraints>
                             </stackView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="isM-tm-E7U">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="isM-tm-E7U">
                                 <rect key="frame" x="0.0" y="80" width="478" height="40.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
