--- a/notritionVendorsAPP/View/AccountDetail.storyboard
+++ b/notritionVendorsAPP/View/AccountDetail.storyboard
@@ -137,7 +137,7 @@
                         <outlet property="userAvatar" destination="jB1-UH-Nl9" id="q9m-8B-oco"/>
                         <outlet property="username" destination="V60-Bw-FiI" id="Dea-7R-GDc"/>
                         <segue destination="sdt-M8-uS0" kind="show" identifier="AccountToComment" id="bge-Oj-lBl"/>
-                        <segue destination="VV2-md-XX2" kind="push" identifier="AccountToPassword" id="XA3-IY-4mP"/>
+                        <segue destination="VV2-md-XX2" kind="show" identifier="AccountToPassword" id="XA3-IY-4mP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="khJ-py-MN8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -249,7 +249,6 @@
                     <connections>
                         <outlet property="confirmPass" destination="eIR-du-5h8" id="R90-Mi-zWF"/>
                         <outlet property="currentPass" destination="5nZ-3Q-9Ai" id="evH-vu-c5v"/>
-                        <outlet property="doneBtnPressed" destination="73i-FK-kDT" id="TYO-u1-mwN"/>
                         <outlet property="newPass" destination="Akq-vM-Yc3" id="lng-9k-7ZV"/>
                         <outlet property="notification" destination="5fl-nM-ANw" id="ziG-x3-Cos"/>
                     </connections>
@@ -257,7 +256,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yJH-Vd-TL8" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="ZBW-qH-eFs" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2297" y="3107"/>
+            <point key="canvasLocation" x="2162" y="3092"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wdg-sQ-6R3">
